Updated version to match cookiecutter

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -7,28 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pytemplate.subpackage.module import identity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8e7aa72c-7014-48a8-9283-4c9eb06a2e58",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "identity(1)"
+    "import pytemplate"
    ]
   }
  ],
